<resources>
    <string name="app_name">Perfect Day</string>
    <string name="app_moto">Let\'s work together to make today a perfect day and transform you into the person you want to be.</string>
    <string name="app_login_reason">Google account is used to sync your created progress in the cloud so that you don\'t have to worry about losing progress.</string>
    <string name="sign_in_cancelled">sign in cancelled</string>
    <string name="no_internet_connection">no internet connection</string>
    <string name="unknown_error">Calma Calma !!</string>
    <string name="sign_in_successful">signed in</string>
    <string name="unknown_sign_in_response">unknown response</string>
    <string name="today">Today</string>
    <string name="my_list">List</string>
    <string name="menu">Menu</string>
    <string name="content_desc_app_icon">app icon</string>
    <string name="okay">Okay</string>
    <string name="content_desc_add_task">Create New Task</string>
    <string name="welcome_format">Welcome %s</string>
    <string name="press_toggle_complete">Radio Button to toggle task complete</string>
    <string name="profile_menu">Menu</string>
    <string name="logout">logout</string>
    <string name="feedback_string">feedback</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="invite">invite</string>
    <string name="rate">rate</string>
    <string name="about">licences</string>
    <string name="mail_subject">Perfect Day Feedback</string>
    <string name="my_email">vivk274@gmail.com</string>
    <string name="invite_message">What\'s your perfect day like?</string>
    <string name="action_licenses">Licenses</string>
    <string name="all_tasks">Created List</string>
    <string name="include_in_today">add this to today\'s list.</string>
    <string name="new_task">Perfect Day Task</string>
    <string name="edit_dialog_title">Edit Perfect Day Task</string>
    <string name="invalid_task">Please enter valid input</string>
    <string name="empty_task">Empty task don\'t get stuff done.</string>
    <string name="_00">00</string>
    <string name="title">Confirm Delete</string>
    <string name="content">Press okay to delete task.</string>
    <string name="agree">Okay</string>
    <string name="disagree">cancel</string>
    <string name="title_archive">Archive</string>
    <string name="archive_content">Pressing okay will move this out of today\'s list.</string>
    <string name="streak">STREAK</string>
    <string name="_0">0</string>
    <string name="cloud_vector_path">M429.36419,378.60799l-259.255908,0c-48.029885,0 -87.108254,-42.595904 -87.108254,-94.952447c0,-51.634079 37.996615,-93.787658 85.107009,-94.937703c16.780712,-63.458903 69.786666,-107.263828 130.757035,-107.263828c50.51792,0 96.019204,29.827454 119.885406,78.23256c3.515701,-0.383348 7.058446,-0.589767 10.601191,-0.589767c55.521033,0 100.684269,49.23078 100.684269,109.740849c0.027044,60.524813 -45.149715,109.770337 -100.670747,109.770337zm-258.106544,-175.101749c-41.782755,0 -74.735691,35.946284 -74.735691,80.149302c0,44.217762 33.007024,80.193534 73.586327,80.193534l259.255908,0c48.070451,0 87.162342,-42.640136 87.162342,-95.026168c0,-52.386032 -39.105413,-94.99668 -87.162342,-94.99668c-4.245885,0 -8.518814,0.324372 -12.69709,0.973115c-3.096521,0.928883 -6.341784,-0.678232 -7.761586,-3.81874c-20.891377,-46.149248 -63.052746,-74.797168 -110.027921,-74.797168c-56.562221,0 -105.511597,41.858695 -119.047046,101.793742c-0.757228,3.36167 -3.759096,5.484831 -6.73392,5.617528l-1.717285,-0.103209c-0.040566,0.014744 -0.081132,0.014744 -0.121697,0.014744z</string>
    <string name="item_added">Item Added</string>
    <string name="moved_today_message">Moved to Today\'s List</string>
    <string name="hint_create_item">Click on + symbol to create a new \n Perfect Day Task</string>
    <string name="hint_edit_task">Swipe Right to edit a task and Left to move out of today\'s list.</string>
    <string name="hint_list_task">Swipe left to delete and click on the item to view activity for the previous month.</string>
    <string name="no_tasks_created_yet">widget_no_task_message</string>
    <string name="tap_on_mic">Tap on mic to create new task</string>
    <string name="speech_prompt">Say your perfect day task.</string>
    <string name="speech_not_supported">Sorry! Your device doesn\\\'t support speech input</string>
</resources>
