<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:lib="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.github.glomadrian.roadrunner.IndeterminateRoadRunner
        android:id="@+id/material"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        lib:movement_direction="counter_clockwise"
        lib:path_animation_type="material"
        lib:path_color="@color/deep_orange"
        lib:path_data="@string/cloud_vector_path"
        lib:path_original_height="480"
        lib:path_original_width="640"
        lib:stroke_width="3sp" />

    <LinearLayout
        android:id="@+id/linear_lay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/login_icon_top_margin"
            android:contentDescription="@string/content_desc_app_icon"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_title_logo_margin"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.LoginTitle" />

        <TextView
            fontPath="fonts/Roboto-Light.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/login_moto_right"
            android:layout_marginStart="@dimen/login_moto_left"
            android:layout_marginTop="@dimen/login_title_moto_margin"
            android:gravity="center"
            android:text="@string/app_moto"
            android:textColor="@color/secondaryTextColor"
            android:textSize="16sp"
            tools:ignore="MissingPrefix" />

        <Button xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/google_button"
            style="@style/FirebaseUI.Button.AccountChooser.GoogleButton"
            android:layout_marginBottom="@dimen/login_button_margin_bottom"
            android:layout_marginLeft="@dimen/login_button_margin"
            android:layout_marginRight="@dimen/login_button_margin"
            android:layout_marginTop="@dimen/login_button_margin_top"
            android:text="@string/sign_in_with_google" />

        <TextView
            fontPath="fonts/Roboto-Light.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_reason_margin"
            android:layout_marginRight="@dimen/login_reason_margin"
            android:gravity="center"
            android:text="@string/app_login_reason"
            android:textColor="@color/tertiaryTextColor"
            android:textSize="@dimen/text_size_small"
            tools:ignore="MissingPrefix" />

    </LinearLayout>
</RelativeLayout>